# zeroclaw-plugins

./: CLAUDE.md  Cargo.toml  README.md  registry.json
.github/workflows/: publish.yml  validate.yml
docs/: ci.md
plugins/amqp/: Cargo.toml  README.md  manifest.toml
plugins/amqp/src/: amqp.rs  lib.rs
plugins/amqp/tests/: amqp.rs
plugins/clawdtalk/: Cargo.toml  README.md  manifest.toml
plugins/clawdtalk/src/: clawdtalk.rs  lib.rs
plugins/clawdtalk/tests/: clawdtalk.rs
plugins/dingtalk/: Cargo.toml  README.md  manifest.toml
plugins/dingtalk/src/: dingtalk.rs  lib.rs
plugins/dingtalk/tests/: dingtalk.rs
plugins/discord/: Cargo.toml  README.md  manifest.toml
plugins/discord/src/: discord.rs  lib.rs
plugins/email/: Cargo.toml  README.md  manifest.toml
plugins/email/src/: email.rs  lib.rs
plugins/email/tests/: email.rs
plugins/gitea/: Cargo.toml  README.md  manifest.toml
plugins/gitea/src/: gitea.rs  lib.rs
plugins/gitea/tests/: gitea.rs
plugins/irc/: Cargo.toml  README.md  manifest.toml
plugins/irc/src/: irc.rs  lib.rs
plugins/irc/tests/: irc.rs
plugins/lark/: Cargo.toml  README.md  manifest.toml
plugins/lark/src/: lark.rs  lib.rs
plugins/line/: Cargo.toml  README.md  manifest.toml
plugins/line/src/: lib.rs  line.rs
plugins/linq/: Cargo.toml  README.md  manifest.toml
plugins/linq/src/: lib.rs  linq.rs
plugins/linq/tests/: linq.rs
plugins/matrix/: Cargo.toml  README.md  manifest.toml
plugins/matrix/src/: lib.rs  matrix.rs
plugins/matrix/tests/: matrix.rs
plugins/mqtt/: Cargo.toml  README.md  manifest.toml
plugins/mqtt/src/: lib.rs  mqtt.rs
plugins/mqtt/tests/: mqtt.rs
plugins/nextcloud/: Cargo.toml  README.md  manifest.toml
plugins/nextcloud/src/: lib.rs  nextcloud.rs
plugins/nextcloud/tests/: nextcloud.rs
plugins/nostr/: Cargo.toml  README.md  manifest.toml
plugins/nostr/src/: lib.rs  nostr.rs
plugins/nostr/tests/: nostr.rs
plugins/payment-watch/: Cargo.toml  README.md  manifest.toml
plugins/payment-watch/src/: lib.rs
plugins/qq/: Cargo.toml  README.md  manifest.toml
plugins/qq/src/: lib.rs  qq.rs
plugins/qq/tests/: qq.rs
plugins/signal/: Cargo.toml  README.md  manifest.toml
plugins/signal/src/: lib.rs  signal.rs
plugins/signal/tests/: signal.rs
plugins/slack/: Cargo.toml  README.md  manifest.toml
plugins/slack/src/: lib.rs  slack.rs
plugins/slack/tests/: slack.rs
plugins/sns-resolve/: Cargo.toml  README.md  manifest.toml
plugins/sns-resolve/src/: lib.rs
plugins/solana-pay-request/: Cargo.toml  README.md  manifest.toml
plugins/solana-pay-request/solana-core/src/: risk.rs  rpc.rs
plugins/solana-pay-request/src/: lib.rs
plugins/spl-transfer-build/: Cargo.toml  README.md  manifest.toml
plugins/spl-transfer-build/solana-core/: Cargo.toml
plugins/spl-transfer-build/solana-core/src/: lib.rs  pubkey.rs  token.rs
plugins/spl-transfer-build/src/: lib.rs
plugins/token-risk-check/: Cargo.toml  README.md  manifest.toml
plugins/token-risk-check/solana-core/: Cargo.toml
plugins/token-risk-check/solana-core/src/: dex.rs  lib.rs
plugins/token-risk-check/src/: lib.rs
plugins/twitch/: Cargo.toml  README.md  manifest.toml
plugins/twitch/src/: lib.rs  twitch.rs
plugins/twitch/tests/: twitch.rs
plugins/wati/: Cargo.toml  README.md  manifest.toml
plugins/wati/src/: lib.rs  wati.rs
plugins/wecom/: Cargo.toml  README.md  manifest.toml
plugins/wecom-ws/: Cargo.toml  README.md  manifest.toml
plugins/wecom-ws/src/: lib.rs  wecom_ws.rs
plugins/wecom-ws/tests/: wecom_ws.rs
plugins/wecom/src/: lib.rs  wecom.rs
plugins/wecom/tests/: wecom.rs
plugins/whatsapp/: Cargo.toml  README.md  manifest.toml
plugins/whatsapp/src/: lib.rs  whatsapp.rs
solana-core/: Cargo.toml
solana-core/src/: lib.rs  risk.rs  rpc.rs
tools/: build-registry.py  registry_contract.py  sync_solana_core.py
tools/ci/: manifest_field.py  packager-image.txt  plan_matrix.py  report_schema.py  run-packager-python.sh  summary.py  test_counts.py  validate_components.sh
tools/ci/tests/: test_ci_tools.py
tools/tests/: test_build_registry.py
