# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure `line` core (rlib) is host-tested with plain
# `cargo test`. `waki` (blocking wasi:http) is a wasm-only dep so the host test
# build never compiles it. HMAC-SHA256 signature verification uses pure-Rust
# `hmac`/`sha2` (wasm-compatible, compiled for both targets).
[package]
name = "line"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LINE channel plugin for ZeroClaw: webhook ingress (host-verified) + Messaging API push over wasi:http."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# wasi:http client — only compiled for the wasm component, never on the host.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
