# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure `nostr` core (rlib) is host-tested with plain
# `cargo test`. This is a WebSocket channel — all I/O goes through the host
# `ws-client` import (no `wasi:http`), so there is no `waki` dependency.
[package]
name = "nostr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Nostr channel plugin for ZeroClaw: subscribe to a relay over a host-mediated WebSocket and receive plaintext notes (kind 1) as inbound messages."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
