[package]
name = "payment-watch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "T0 ZeroClaw plugin: watches an address for an expected payment and screens it for risk before confirming."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zeroclaw-solana-core = { path = "../../solana-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
