[package]
name = "payment-watch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "T0 ZeroClaw plugin: watches an address for an expected payment and screens it for risk before confirming."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vendored copy, not a path dependency reaching outside this directory --
# see solana-core/Cargo.toml and tools/sync_solana_core.py for why.
zeroclaw-solana-core = { path = "solana-core" }
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of any host workspace.
[workspace]
