# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure qq core (rlib) is host-tested with plain
# cargo test. This source-only migration scaffold intentionally performs no
# network I/O until the host exposes the required transport capability.
[package]
name = "qq"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "QQ Official channel plugin source for ZeroClaw: host-gated adapter scaffold for QQ official accounts."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
