[package]
name = "solana-pay-request"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "T1 ZeroClaw plugin: turns a charge request into a Solana Pay QR code."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vendored copy, not a path dependency reaching outside this directory --
# see solana-core/Cargo.toml and tools/sync_solana_core.py for why. Used
# for Pubkey::parse to validate the recipient address before building a
# URL; building the URL itself is still pure string formatting.
zeroclaw-solana-core = { path = "solana-core" }
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# wasi:http client -- only compiled for the wasm component, never on the
# host, so `cargo test` never tries to build it. Used only to
# opportunistically upgrade the operator's static `brl_rate` to a live
# one (Jupiter + Frankfurter); never for the Solana Pay URL itself.
# getrandom is used to auto-generate a fresh Solana Pay `reference` when
# the caller omits one -- same crate/pattern plugins/wecom-ws already
# uses on this target, so this isn't a new/unproven wasm capability.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }
getrandom = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of any host workspace.
[workspace]
