[package]
name = "solana-pay-request"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "T1 ZeroClaw plugin: turns a charge request into a Solana Pay QR code."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vendored copy, not a path dependency reaching outside this directory --
# see solana-core/Cargo.toml and tools/sync_solana_core.py for why. Used
# for Pubkey::parse to validate the recipient address before building a
# URL; building the URL itself is still pure string formatting.
zeroclaw-solana-core = { path = "solana-core" }
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Added for the "customer only has SOL" swap-preparation upgrade (see
# core::prepare_swap). Unlike spl-transfer-build, this plugin never
# *constructs* an instruction from scratch -- Jupiter's own /swap
# endpoint returns a ready-built legacy transaction (requested via
# `asLegacyTransaction: true`, confirmed live to deserialize cleanly as
# a plain `solana_transaction::Transaction`, avoiding any need for
# versioned-transaction/address-lookup-table support). This plugin only
# ever *reads* that transaction back to certify it, and derives the
# customer's own associated token account to check their existing
# balance -- so the production dependency set is smaller than
# spl-transfer-build's: no solana-system-interface/-nonce (no
# durable-nonce path here), and no solana-instruction in production
# code (nothing is built by hand) -- it's a dev-dependency only, below,
# used to construct fixture transactions in certify_swap's tests.
solana-pubkey = { version = "2", features = ["curve25519", "sha2"] }
solana-message = { version = "2", features = ["bincode"] }
solana-transaction = { version = "2", features = ["bincode"] }
bincode = "1"
base64 = "0.22"

[dev-dependencies]
# Test-only: build fixture instructions/transactions for certify_swap's
# tests. Never used in production code -- this plugin never constructs
# a swap instruction or a blockhash itself, only reads a transaction
# back from Jupiter.
solana-instruction = "2"
solana-hash = "2"

# wasi:http client -- only compiled for the wasm component, never on the
# host, so `cargo test` never tries to build it. Used only to
# opportunistically upgrade the operator's static `brl_rate` to a live
# one (Jupiter + Frankfurter); never for the Solana Pay URL itself.
# getrandom is used to auto-generate a fresh Solana Pay `reference` when
# the caller omits one -- same crate/pattern plugins/wecom-ws already
# uses on this target, so this isn't a new/unproven wasm capability.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }
getrandom = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of any host workspace.
[workspace]
