[package]
name = "token-risk-check"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "T0 ZeroClaw plugin: red/amber/green scam-risk verdict for a Solana mint."
publish = false

# cdylib for the wasm component; rlib so the pure core is testable on the
# host with a plain `cargo test`.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vendored copy, not a path dependency reaching outside this directory --
# see solana-core/Cargo.toml and tools/sync_solana_core.py for why.
zeroclaw-solana-core = { path = "solana-core" }
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# wasi:http client -- only compiled for the wasm component, never on the
# host, so `cargo test` never tries to build it.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of any host workspace.
[workspace]
