# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component. The pure Twitch IRC core (rlib) is host-tested; the WASM
# shim performs TLS socket I/O only through the host `socket` import.
[package]
name = "twitch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Twitch channel plugin for ZeroClaw: nonblocking IRC chat over a host-mediated TLS socket."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
